small ui fixes. still need to fix a11y text contrast bug.

--- a/src/Bootstrap/less/theme/page-list-packages.less
+++ b/src/Bootstrap/less/theme/page-list-packages.less
@@ -152,10 +152,13 @@
 
       input {
         opacity: 0;
+        width: 0px;
       }
 
       label {
         float: right;
+        text-align: center;
+        width: 45px;
         padding: 7px;
         margin: 0px;
         vertical-align: middle;
